Removed submodules for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/home/daan/.virtualenvs/systemrunner/bin/python"
+    "python.pythonPath": "/home/daan/.virtualenvs/systemrunner/bin/python",
+    "files.associations": {
+        "bitset": "cpp",
+        "memory": "cpp"
+    }
 }
